--- a/src/forms/PasswordDlg.ui
+++ b/src/forms/PasswordDlg.ui
@@ -332,12 +332,14 @@
  </customwidgets>
  <tabstops>
   <tabstop>Edit_Password</tabstop>
+  <tabstop>Edit_PasswordRep</tabstop>
   <tabstop>Combo_Dirs</tabstop>
-  <tabstop>ButtonBrowse</tabstop>
   <tabstop>CheckBox_Both</tabstop>
+  <tabstop>ButtonChangeEchoMode</tabstop>
+  <tabstop>ButtonBrowse</tabstop>
   <tabstop>ButtonOK</tabstop>
   <tabstop>ButtonCancel</tabstop>
-  <tabstop>ButtonChangeEchoMode</tabstop>
+  <tabstop>ButtonExit</tabstop>
  </tabstops>
  <resources/>
  <connections/>
