--- a/src/forms/SimplePasswordDlg.ui
+++ b/src/forms/SimplePasswordDlg.ui
@@ -1,115 +1,117 @@
-<ui stdsetdef="1" version="4.0" >
-  <author/>
-  <comment/>
-  <exportmacro/>
-  <class>SimplePasswordDialog</class>
-  <widget class="QDialog" name="SimplePasswordDialog" >
-    <property name="geometry" >
-      <rect>
-        <x>2</x>
-        <y>3</y>
-        <width>345</width>
-        <height>90</height>
-      </rect>
-    </property>
-    <property name="sizePolicy" >
-      <sizepolicy>
-        <hsizetype>0</hsizetype>
-        <vsizetype>0</vsizetype>
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-      </sizepolicy>
-    </property>
-    <property name="minimumSize" >
-      <size>
-        <width>345</width>
-        <height>90</height>
-      </size>
-    </property>
-    <property name="maximumSize" >
-      <size>
-        <width>345</width>
-        <height>90</height>
-      </size>
-    </property>
-    <property name="windowTitle" >
-      <string>Enter your Password</string>
-    </property>
-    <widget class="QLabel" name="textLabel1" >
-      <property name="geometry" >
-        <rect>
-          <x>10</x>
-          <y>20</y>
-          <width>60</width>
-          <height>20</height>
-        </rect>
-      </property>
-      <property name="text" >
-        <string>Password:</string>
-      </property>
-    </widget>
-    <widget class="QLineEdit" name="EditPassword" >
-      <property name="geometry" >
-        <rect>
-          <x>80</x>
-          <y>20</y>
-          <width>240</width>
-          <height>21</height>
-        </rect>
-      </property>
-    </widget>
-    <widget class="QPushButton" name="ButtonOK" >
-      <property name="geometry" >
-        <rect>
-          <x>170</x>
-          <y>60</y>
-          <width>80</width>
-          <height>23</height>
-        </rect>
-      </property>
-      <property name="text" >
-        <string>O&amp;K</string>
-      </property>
-      <property name="shortcut" >
-        <string>Alt+K</string>
-      </property>
-    </widget>
-    <widget class="QPushButton" name="ButtonCancel" >
-      <property name="geometry" >
-        <rect>
-          <x>257</x>
-          <y>60</y>
-          <width>80</width>
-          <height>23</height>
-        </rect>
-      </property>
-      <property name="text" >
-        <string>&amp;Cancel</string>
-      </property>
-      <property name="shortcut" >
-        <string>Alt+C</string>
-      </property>
-    </widget>
-    <widget class="QPushButton" name="Button_HidePassword" >
-      <property name="geometry" >
-        <rect>
-          <x>320</x>
-          <y>20</y>
-          <width>20</width>
-          <height>20</height>
-        </rect>
-      </property>
-      <property name="text" >
-        <string>...</string>
-      </property>
-      <property name="shortcut" >
-        <string/>
-      </property>
-      <property name="checkable" >
-        <bool>true</bool>
-      </property>
-    </widget>
+<ui version="4.0" >
+ <author></author>
+ <comment></comment>
+ <exportmacro></exportmacro>
+ <class>SimplePasswordDialog</class>
+ <widget class="QDialog" name="SimplePasswordDialog" >
+  <property name="geometry" >
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>345</width>
+    <height>90</height>
+   </rect>
+  </property>
+  <property name="sizePolicy" >
+   <sizepolicy>
+    <hsizetype>0</hsizetype>
+    <vsizetype>0</vsizetype>
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize" >
+   <size>
+    <width>345</width>
+    <height>90</height>
+   </size>
+  </property>
+  <property name="maximumSize" >
+   <size>
+    <width>345</width>
+    <height>90</height>
+   </size>
+  </property>
+  <property name="windowTitle" >
+   <string>Enter your Password</string>
+  </property>
+  <widget class="QLabel" name="textLabel1" >
+   <property name="geometry" >
+    <rect>
+     <x>10</x>
+     <y>20</y>
+     <width>60</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>Password:</string>
+   </property>
   </widget>
-  <layoutdefault spacing="6" margin="11" />
-  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+  <widget class="QPushButton" name="ButtonOK" >
+   <property name="geometry" >
+    <rect>
+     <x>170</x>
+     <y>60</y>
+     <width>80</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>O&amp;K</string>
+   </property>
+   <property name="shortcut" >
+    <string>Alt+K</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="ButtonCancel" >
+   <property name="geometry" >
+    <rect>
+     <x>257</x>
+     <y>60</y>
+     <width>80</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>&amp;Cancel</string>
+   </property>
+   <property name="shortcut" >
+    <string>Alt+C</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="EditPassword" >
+   <property name="geometry" >
+    <rect>
+     <x>80</x>
+     <y>20</y>
+     <width>240</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="Button_HidePassword" >
+   <property name="geometry" >
+    <rect>
+     <x>320</x>
+     <y>20</y>
+     <width>20</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>...</string>
+   </property>
+   <property name="shortcut" >
+    <string/>
+   </property>
+   <property name="checkable" >
+    <bool>true</bool>
+   </property>
+  </widget>
+ </widget>
+ <layoutdefault spacing="6" margin="11" />
+ <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <resources/>
+ <connections/>
 </ui>
