--- a/src/forms/EditEntryDlg.ui
+++ b/src/forms/EditEntryDlg.ui
@@ -38,191 +38,20 @@
   <property name="modal" >
    <bool>true</bool>
   </property>
-  <widget class="QLineEdit" name="Edit_Title" >
+  <widget class="QPushButton" name="ButtonOK" >
    <property name="geometry" >
     <rect>
-     <x>111</x>
-     <y>90</y>
-     <width>370</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="Edit_Password_w" >
-   <property name="geometry" >
-    <rect>
-     <x>111</x>
-     <y>200</y>
-     <width>330</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="Edit_UserName" >
-   <property name="geometry" >
-    <rect>
-     <x>111</x>
-     <y>120</y>
-     <width>370</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="Edit_Password" >
-   <property name="geometry" >
-    <rect>
-     <x>111</x>
-     <y>180</y>
-     <width>330</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="Combo_Group" >
-   <property name="geometry" >
-    <rect>
-     <x>110</x>
-     <y>60</y>
-     <width>220</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="Combo_IconPicker" >
-   <property name="geometry" >
-    <rect>
-     <x>431</x>
-     <y>60</y>
-     <width>50</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="textLabel5" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>120</y>
-     <width>90</width>
-     <height>21</height>
+     <x>270</x>
+     <y>497</y>
+     <width>103</width>
+     <height>23</height>
     </rect>
    </property>
    <property name="text" >
-    <string>Username:</string>
+    <string>O&amp;K</string>
    </property>
-  </widget>
-  <widget class="QLabel" name="textLabel8" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>200</y>
-     <width>97</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>Password Repet.:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="textLabel4" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>90</y>
-     <width>90</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>Title:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="textLabel7" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>150</y>
-     <width>90</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>URL:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="textLabel6" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>180</y>
-     <width>100</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>Password:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="textLabel9" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>225</y>
-     <width>90</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>Quality:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="textLabel10" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>250</y>
-     <width>100</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>Comment:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="textLabel11" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>410</y>
-     <width>100</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>Expires:</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="Edit_URL" >
-   <property name="geometry" >
-    <rect>
-     <x>111</x>
-     <y>150</y>
-     <width>370</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="textLabel3" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>60</y>
-     <width>90</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>Group:</string>
+   <property name="shortcut" >
+    <string>Alt+K</string>
    </property>
   </widget>
   <widget class="QPushButton" name="ButtonCancel" >
@@ -239,19 +68,6 @@
    </property>
    <property name="shortcut" >
     <string>Alt+C</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="Label_AttachmentSize" >
-   <property name="geometry" >
-    <rect>
-     <x>110</x>
-     <y>461</y>
-     <width>120</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>%1</string>
    </property>
   </widget>
   <widget class="QLabel" name="Banner" >
@@ -275,218 +91,298 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="textLabel1" >
-   <property name="geometry" >
-    <rect>
-     <x>400</x>
-     <y>60</y>
-     <width>27</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>Icon:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="Label_Bits" >
-   <property name="geometry" >
-    <rect>
-     <x>400</x>
-     <y>228</y>
-     <width>44</width>
-     <height>14</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>% Bit</string>
-   </property>
-  </widget>
-  <widget class="QToolButton" name="ButtonGenPw" >
-   <property name="geometry" >
-    <rect>
-     <x>450</x>
-     <y>200</y>
-     <width>31</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>Ge&amp;n.</string>
-   </property>
-  </widget>
-  <widget class="QToolButton" name="ButtonEchoMode" >
-   <property name="geometry" >
-    <rect>
-     <x>450</x>
-     <y>180</y>
-     <width>31</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>...</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="ButtonOK" >
-   <property name="geometry" >
-    <rect>
-     <x>270</x>
-     <y>497</y>
-     <width>103</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>O&amp;K</string>
-   </property>
-   <property name="shortcut" >
-    <string>Alt+K</string>
-   </property>
-  </widget>
-  <widget class="Q3TextEdit" name="Edit_Comment" >
-   <property name="geometry" >
-    <rect>
-     <x>111</x>
-     <y>250</y>
-     <width>370</width>
-     <height>151</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QDateTimeEdit" name="DateTime_Expire" >
-   <property name="geometry" >
-    <rect>
-     <x>110</x>
-     <y>410</y>
-     <width>194</width>
-     <height>22</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QCheckBox" name="CheckBox_ExpiresNever" >
-   <property name="geometry" >
-    <rect>
-     <x>320</x>
-     <y>410</y>
-     <width>161</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>Never</string>
-   </property>
-  </widget>
-  <widget class="QProgressBar" name="Progress_Quali" >
-   <property name="geometry" >
-    <rect>
-     <x>110</x>
-     <y>227</y>
-     <width>281</width>
-     <height>15</height>
-    </rect>
-   </property>
-   <property name="value" >
-    <number>24</number>
-   </property>
-   <property name="textVisible" >
-    <bool>false</bool>
-   </property>
-   <property name="orientation" >
-    <enum>Qt::Horizontal</enum>
-   </property>
-  </widget>
-  <widget class="QLabel" name="textLabel12" >
+  <widget class="QWidget" name="" >
    <property name="geometry" >
     <rect>
      <x>10</x>
-     <y>440</y>
-     <width>90</width>
-     <height>21</height>
+     <y>60</y>
+     <width>481</width>
+     <height>431</height>
     </rect>
    </property>
-   <property name="text" >
-    <string>Attachment:</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="Edit_Attachment" >
-   <property name="enabled" >
-    <bool>false</bool>
-   </property>
-   <property name="geometry" >
-    <rect>
-     <x>110</x>
-     <y>440</y>
-     <width>280</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QToolButton" name="ButtonOpenAttachment" >
-   <property name="geometry" >
-    <rect>
-     <x>390</x>
-     <y>440</y>
-     <width>30</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string/>
-   </property>
-   <property name="icon" >
-    <iconset/>
-   </property>
-  </widget>
-  <widget class="QToolButton" name="ButtonSaveAttachment" >
-   <property name="geometry" >
-    <rect>
-     <x>420</x>
-     <y>440</y>
-     <width>31</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string/>
-   </property>
-   <property name="icon" >
-    <iconset/>
-   </property>
-  </widget>
-  <widget class="QToolButton" name="ButtonDeleteAttachment" >
-   <property name="geometry" >
-    <rect>
-     <x>450</x>
-     <y>440</y>
-     <width>31</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string/>
-   </property>
-   <property name="icon" >
-    <iconset/>
-   </property>
-  </widget>
-  <widget class="Line" name="line1" >
-   <property name="geometry" >
-    <rect>
-     <x>0</x>
-     <y>476</y>
-     <width>490</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="frameShape" >
-    <enum>QFrame::HLine</enum>
-   </property>
-   <property name="frameShadow" >
-    <enum>QFrame::Sunken</enum>
-   </property>
-   <property name="orientation" >
-    <enum>Qt::Horizontal</enum>
-   </property>
+   <layout class="QGridLayout" >
+    <property name="margin" >
+     <number>0</number>
+    </property>
+    <property name="spacing" >
+     <number>6</number>
+    </property>
+    <item row="6" column="0" >
+     <widget class="QLabel" name="textLabel9" >
+      <property name="text" >
+       <string>Quality:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="9" column="0" >
+     <widget class="QLabel" name="textLabel12" >
+      <property name="text" >
+       <string>Attachment:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="5" >
+     <widget class="QToolButton" name="ButtonEchoMode" >
+      <property name="sizePolicy" >
+       <sizepolicy>
+        <hsizetype>1</hsizetype>
+        <vsizetype>0</vsizetype>
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize" >
+       <size>
+        <width>0</width>
+        <height>23</height>
+       </size>
+      </property>
+      <property name="maximumSize" >
+       <size>
+        <width>16777215</width>
+        <height>23</height>
+       </size>
+      </property>
+      <property name="text" >
+       <string>...</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0" >
+     <widget class="QLabel" name="textLabel4" >
+      <property name="text" >
+       <string>Title:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0" >
+     <widget class="QLabel" name="textLabel5" >
+      <property name="text" >
+       <string>Username:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="0" >
+     <widget class="QLabel" name="textLabel10" >
+      <property name="text" >
+       <string>Comment:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="1" >
+     <widget class="QDateTimeEdit" name="DateTime_Expire" />
+    </item>
+    <item row="10" column="1" >
+     <widget class="QLabel" name="Label_AttachmentSize" >
+      <property name="text" >
+       <string>%1</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1" colspan="4" >
+     <widget class="QLineEdit" name="Edit_Password" />
+    </item>
+    <item row="3" column="0" >
+     <widget class="QLabel" name="textLabel7" >
+      <property name="text" >
+       <string>URL:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="5" >
+     <widget class="QToolButton" name="ButtonGenPw" >
+      <property name="sizePolicy" >
+       <sizepolicy>
+        <hsizetype>1</hsizetype>
+        <vsizetype>0</vsizetype>
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize" >
+       <size>
+        <width>0</width>
+        <height>23</height>
+       </size>
+      </property>
+      <property name="maximumSize" >
+       <size>
+        <width>16777215</width>
+        <height>23</height>
+       </size>
+      </property>
+      <property name="text" >
+       <string>Ge&amp;n.</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1" colspan="4" >
+     <widget class="QLineEdit" name="Edit_Password_w" />
+    </item>
+    <item row="0" column="0" >
+     <widget class="QLabel" name="textLabel3" >
+      <property name="text" >
+       <string>Group:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1" colspan="5" >
+     <widget class="QLineEdit" name="Edit_Title" />
+    </item>
+    <item row="9" column="1" colspan="3" >
+     <widget class="QLineEdit" name="Edit_Attachment" >
+      <property name="enabled" >
+       <bool>false</bool>
+      </property>
+      <property name="sizePolicy" >
+       <sizepolicy>
+        <hsizetype>1</hsizetype>
+        <vsizetype>0</vsizetype>
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1" colspan="5" >
+     <widget class="QLineEdit" name="Edit_UserName" />
+    </item>
+    <item row="5" column="0" >
+     <widget class="QLabel" name="textLabel8" >
+      <property name="text" >
+       <string>Password Repet.:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1" colspan="2" >
+     <widget class="QComboBox" name="Combo_Group" />
+    </item>
+    <item row="3" column="1" colspan="5" >
+     <widget class="QLineEdit" name="Edit_URL" />
+    </item>
+    <item row="4" column="0" >
+     <widget class="QLabel" name="textLabel6" >
+      <property name="text" >
+       <string>Password:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="0" >
+     <widget class="QLabel" name="textLabel11" >
+      <property name="text" >
+       <string>Expires:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="1" colspan="5" >
+     <widget class="Q3TextEdit" name="Edit_Comment" />
+    </item>
+    <item row="11" column="0" colspan="6" >
+     <widget class="Line" name="line1" >
+      <property name="frameShape" >
+       <enum>QFrame::HLine</enum>
+      </property>
+      <property name="frameShadow" >
+       <enum>QFrame::Sunken</enum>
+      </property>
+      <property name="orientation" >
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="5" >
+     <widget class="QComboBox" name="Combo_IconPicker" />
+    </item>
+    <item row="9" column="4" colspan="2" >
+     <layout class="QHBoxLayout" >
+      <property name="margin" >
+       <number>0</number>
+      </property>
+      <property name="spacing" >
+       <number>6</number>
+      </property>
+      <item>
+       <widget class="QToolButton" name="ButtonOpenAttachment" >
+        <property name="text" >
+         <string/>
+        </property>
+        <property name="icon" >
+         <iconset/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="ButtonSaveAttachment" >
+        <property name="text" >
+         <string/>
+        </property>
+        <property name="icon" >
+         <iconset/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="ButtonDeleteAttachment" >
+        <property name="text" >
+         <string/>
+        </property>
+        <property name="icon" >
+         <iconset/>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item row="0" column="4" >
+     <widget class="QLabel" name="textLabel1" >
+      <property name="text" >
+       <string>Icon:</string>
+      </property>
+      <property name="alignment" >
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="2" colspan="4" >
+     <widget class="QCheckBox" name="CheckBox_ExpiresNever" >
+      <property name="text" >
+       <string>Never</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="5" >
+     <widget class="QLabel" name="Label_Bits" >
+      <property name="text" >
+       <string>% Bit</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="1" colspan="4" >
+     <widget class="QProgressBar" name="Progress_Quali" >
+      <property name="minimumSize" >
+       <size>
+        <width>0</width>
+        <height>14</height>
+       </size>
+      </property>
+      <property name="maximumSize" >
+       <size>
+        <width>16777215</width>
+        <height>14</height>
+       </size>
+      </property>
+      <property name="value" >
+       <number>24</number>
+      </property>
+      <property name="textVisible" >
+       <bool>false</bool>
+      </property>
+      <property name="orientation" >
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11" />
