--- a/src/forms/EditGroupDlg.ui
+++ b/src/forms/EditGroupDlg.ui
@@ -1,133 +1,151 @@
-<ui version="4.0" stdsetdef="1" >
-  <author>Tarek Saidi</author>
-  <comment></comment>
-  <exportmacro></exportmacro>
-  <class>EditGroupDialog</class>
-  <widget class="QDialog" name="EditGroupDialog" >
-    <property name="geometry" >
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>302</width>
-        <height>105</height>
-      </rect>
-    </property>
-    <property name="minimumSize" >
-      <size>
-        <width>200</width>
-        <height>105</height>
-      </size>
-    </property>
-    <property name="maximumSize" >
-      <size>
-        <width>302</width>
-        <height>100</height>
-      </size>
-    </property>
-    <property name="windowTitle" >
-      <string>Group Properties</string>
-    </property>
-    <widget class="Line" name="line1" >
-      <property name="geometry" >
-        <rect>
-          <x>10</x>
-          <y>62</y>
-          <width>290</width>
-          <height>16</height>
-        </rect>
-      </property>
-      <property name="frameShape" >
-        <enum>QFrame::HLine</enum>
-      </property>
-      <property name="frameShadow" >
-        <enum>QFrame::Sunken</enum>
-      </property>
-    </widget>
-    <widget class="QLineEdit" name="EditTitle" >
-      <property name="geometry" >
-        <rect>
-          <x>70</x>
-          <y>10</y>
-          <width>230</width>
-          <height>21</height>
-        </rect>
-      </property>
-    </widget>
-    <widget class="QLabel" name="Label1" >
-      <property name="geometry" >
-        <rect>
-          <x>10</x>
-          <y>10</y>
-          <width>27</width>
-          <height>20</height>
-        </rect>
-      </property>
-      <property name="text" >
-        <string>Title:</string>
-      </property>
-    </widget>
-    <widget class="QLabel" name="Label2" >
-      <property name="geometry" >
-        <rect>
-          <x>10</x>
-          <y>40</y>
-          <width>43</width>
-          <height>20</height>
-        </rect>
-      </property>
-      <property name="text" >
-        <string>Icon:</string>
-      </property>
-    </widget>
-    <widget class="QComboBox" name="ComboIconPicker" >
-      <property name="geometry" >
-        <rect>
-          <x>70</x>
-          <y>40</y>
-          <width>50</width>
-          <height>21</height>
-        </rect>
-      </property>
-    </widget>
-    <widget class="QPushButton" name="ButtonCancel" >
-      <property name="geometry" >
-        <rect>
-          <x>226</x>
-          <y>80</y>
-          <width>70</width>
-          <height>20</height>
-        </rect>
-      </property>
-      <property name="text" >
-        <string>&amp;Cancel</string>
-      </property>
-      <property name="shortcut" >
-        <string>Alt+C</string>
-      </property>
-    </widget>
-    <widget class="QPushButton" name="ButtonOK" >
-      <property name="geometry" >
-        <rect>
-          <x>147</x>
-          <y>80</y>
-          <width>70</width>
-          <height>20</height>
-        </rect>
-      </property>
-      <property name="text" >
-        <string>O&amp;K</string>
-      </property>
-      <property name="shortcut" >
-        <string>Alt+K</string>
-      </property>
-    </widget>
+<ui version="4.0" >
+ <author>Tarek Saidi</author>
+ <comment></comment>
+ <exportmacro></exportmacro>
+ <class>EditGroupDialog</class>
+ <widget class="QDialog" name="EditGroupDialog" >
+  <property name="geometry" >
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>302</width>
+    <height>105</height>
+   </rect>
+  </property>
+  <property name="minimumSize" >
+   <size>
+    <width>200</width>
+    <height>105</height>
+   </size>
+  </property>
+  <property name="maximumSize" >
+   <size>
+    <width>302</width>
+    <height>100</height>
+   </size>
+  </property>
+  <property name="windowTitle" >
+   <string>Group Properties</string>
+  </property>
+  <widget class="QLineEdit" name="EditTitle" >
+   <property name="geometry" >
+    <rect>
+     <x>70</x>
+     <y>10</y>
+     <width>230</width>
+     <height>21</height>
+    </rect>
+   </property>
   </widget>
-  <layoutdefault spacing="6" margin="11" />
-  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
-  <tabstops>
-    <tabstop>EditTitle</tabstop>
-    <tabstop>ComboIconPicker</tabstop>
-    <tabstop>ButtonOK</tabstop>
-    <tabstop>ButtonCancel</tabstop>
-  </tabstops>
+  <widget class="QLabel" name="Label1" >
+   <property name="geometry" >
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>27</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>Title:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="Label2" >
+   <property name="geometry" >
+    <rect>
+     <x>10</x>
+     <y>40</y>
+     <width>43</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>Icon:</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="ComboIconPicker" >
+   <property name="geometry" >
+    <rect>
+     <x>70</x>
+     <y>40</y>
+     <width>50</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="ButtonCancel" >
+   <property name="geometry" >
+    <rect>
+     <x>227</x>
+     <y>77</y>
+     <width>70</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>&amp;Cancel</string>
+   </property>
+   <property name="shortcut" >
+    <string>Alt+C</string>
+   </property>
+  </widget>
+  <widget class="Line" name="line1" >
+   <property name="geometry" >
+    <rect>
+     <x>10</x>
+     <y>62</y>
+     <width>290</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="frameShape" >
+    <enum>QFrame::HLine</enum>
+   </property>
+   <property name="frameShadow" >
+    <enum>QFrame::Sunken</enum>
+   </property>
+   <property name="orientation" >
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="ButtonOK" >
+   <property name="geometry" >
+    <rect>
+     <x>147</x>
+     <y>77</y>
+     <width>70</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>O&amp;K</string>
+   </property>
+   <property name="shortcut" >
+    <string>Alt+K</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="Button_Icon" >
+   <property name="geometry" >
+    <rect>
+     <x>123</x>
+     <y>39</y>
+     <width>21</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>></string>
+   </property>
+  </widget>
+ </widget>
+ <layoutdefault spacing="6" margin="11" />
+ <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <tabstops>
+  <tabstop>EditTitle</tabstop>
+  <tabstop>ComboIconPicker</tabstop>
+  <tabstop>ButtonOK</tabstop>
+  <tabstop>ButtonCancel</tabstop>
+ </tabstops>
+ <resources/>
+ <connections/>
 </ui>
