--- a/src/forms/SelectIconDlg.ui
+++ b/src/forms/SelectIconDlg.ui
@@ -8,105 +8,104 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>468</width>
-    <height>272</height>
+    <width>478</width>
+    <height>280</height>
    </rect>
+  </property>
+  <property name="sizePolicy" >
+   <sizepolicy>
+    <hsizetype>5</hsizetype>
+    <vsizetype>5</vsizetype>
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle" >
    <string>Dialog</string>
   </property>
-  <widget class="QListWidget" name="List" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>451</width>
-     <height>211</height>
-    </rect>
+  <layout class="QGridLayout" >
+   <property name="margin" >
+    <number>9</number>
    </property>
-   <property name="horizontalScrollBarPolicy" >
-    <enum>Qt::ScrollBarAlwaysOff</enum>
+   <property name="spacing" >
+    <number>6</number>
    </property>
-   <property name="selectionMode" >
-    <enum>QAbstractItemView::ExtendedSelection</enum>
-   </property>
-   <property name="iconSize" >
-    <size>
-     <width>16</width>
-     <height>16</height>
-    </size>
-   </property>
-   <property name="textElideMode" >
-    <enum>Qt::ElideRight</enum>
-   </property>
-   <property name="movement" >
-    <enum>QListView::Static</enum>
-   </property>
-   <property name="flow" >
-    <enum>QListView::LeftToRight</enum>
-   </property>
-   <property name="gridSize" >
-    <size>
-     <width>32</width>
-     <height>44</height>
-    </size>
-   </property>
-   <property name="viewMode" >
-    <enum>QListView::IconMode</enum>
-   </property>
-  </widget>
-  <widget class="QWidget" name="layoutWidget" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>230</y>
-     <width>451</width>
-     <height>33</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" >
-    <property name="margin" >
-     <number>0</number>
-    </property>
-    <property name="spacing" >
-     <number>6</number>
-    </property>
-    <item>
-     <widget class="QPushButton" name="Button_AddIcon" >
-      <property name="text" >
-       <string>Add Custom Icon...</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <spacer>
-      <property name="orientation" >
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" >
-       <size>
-        <width>131</width>
-        <height>31</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item>
-     <widget class="QPushButton" name="Button_PickIcon" >
-      <property name="text" >
-       <string>Pick</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="Button_Cancel" >
-      <property name="text" >
-       <string>Cancel</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
+   <item row="0" column="0" >
+    <layout class="QGridLayout" >
+     <property name="margin" >
+      <number>0</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item row="1" column="0" >
+      <widget class="QPushButton" name="Button_AddIcon" >
+       <property name="text" >
+        <string>Add Custom Icon...</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="2" >
+      <widget class="QPushButton" name="Button_PickIcon" >
+       <property name="text" >
+        <string>Pick</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="3" >
+      <widget class="QPushButton" name="Button_Cancel" >
+       <property name="text" >
+        <string>Cancel</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1" >
+      <spacer>
+       <property name="orientation" >
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" >
+        <size>
+         <width>131</width>
+         <height>31</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="0" column="0" colspan="4" >
+      <widget class="QListWidget" name="List" >
+       <property name="iconSize" >
+        <size>
+         <width>16</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="movement" >
+        <enum>QListView::Static</enum>
+       </property>
+       <property name="flow" >
+        <enum>QListView::LeftToRight</enum>
+       </property>
+       <property name="isWrapping" stdset="0" >
+        <bool>true</bool>
+       </property>
+       <property name="resizeMode" >
+        <enum>QListView::Adjust</enum>
+       </property>
+       <property name="gridSize" >
+        <size>
+         <width>32</width>
+         <height>44</height>
+        </size>
+       </property>
+       <property name="viewMode" >
+        <enum>QListView::IconMode</enum>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+  </layout>
  </widget>
  <pixmapfunction></pixmapfunction>
  <resources/>
