--- a/src/forms/SelectIconDlg.ui
+++ b/src/forms/SelectIconDlg.ui
@@ -21,7 +21,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle" >
-   <string>Dialog</string>
+   <string>Icon Selection</string>
   </property>
   <layout class="QGridLayout" >
    <property name="margin" >
@@ -90,7 +90,7 @@
         <bool>true</bool>
        </property>
        <property name="resizeMode" >
-        <enum>QListView::Adjust</enum>
+        <enum>QListView::Fixed</enum>
        </property>
        <property name="gridSize" >
         <size>
