--- a/src/forms/DatabaseSettingsDlg.ui
+++ b/src/forms/DatabaseSettingsDlg.ui
@@ -3,7 +3,7 @@
   <comment></comment>
   <exportmacro></exportmacro>
   <class>dbsettingdlg_base</class>
-  <widget class="QDialog" name="dbsettingdlg_base" >
+  <widget class="QDialog" name="DatabaseSettingsDlg" >
     <property name="geometry" >
       <rect>
         <x>0</x>
