--- a/src/forms/EditEntryDlg.ui
+++ b/src/forms/EditEntryDlg.ui
@@ -340,7 +340,7 @@
     <item row="6" column="5" >
      <widget class="QLabel" name="Label_Bits" >
       <property name="text" >
-       <string>% Bit</string>
+       <string>%1 Bit</string>
       </property>
      </widget>
     </item>
