--- a/src/forms/EditEntryDlg.ui
+++ b/src/forms/EditEntryDlg.ui
@@ -383,7 +383,7 @@
      <widget class="QComboBox" name="Combo_IconPicker" />
     </item>
     <item row="0" column="5" >
-     <widget class="QToolButton" name="toolButton" >
+     <widget class="QToolButton" name="Button_CustomIcons" >
       <property name="text" >
        <string>></string>
       </property>
