--- a/src/forms/AboutDlg.ui
+++ b/src/forms/AboutDlg.ui
@@ -124,7 +124,7 @@ General Public License (GPL) version 2.</string>
    </widget>
    <widget class="QWidget" name="tab_2" >
     <attribute name="title" >
-     <string>Thanks To</string>
+     <string>Credits</string>
     </attribute>
     <widget class="QTextEdit" name="Edit_Thanks" >
      <property name="geometry" >
