removed all old Qt3 depedencies, Qt3Support is not longer needed
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@92 b624d157-de02-0410-bad0-e51aec6abb33

--- a/src/forms/DatabaseSettingsDlg.ui
+++ b/src/forms/DatabaseSettingsDlg.ui
@@ -35,7 +35,7 @@
     <property name="windowTitle" >
       <string>Database Settings</string>
     </property>
-    <widget class="Q3GroupBox" name="groupBox1" >
+    <widget class="QGroupBox" name="groupBox1" >
       <property name="geometry" >
         <rect>
           <x>10</x>
