--- a/src/forms/PasswordDlg.ui
+++ b/src/forms/PasswordDlg.ui
@@ -114,7 +114,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="Q3GroupBox" name="groupframe" >
+  <widget class="QGroupBox" name="groupframe" >
    <property name="geometry" >
     <rect>
      <x>10</x>
@@ -133,9 +133,6 @@
    </property>
    <property name="title" >
     <string>Key</string>
-   </property>
-   <property name="orientation" >
-    <enum>Qt::Vertical</enum>
    </property>
    <widget class="QWidget" name="layoutWidget" >
     <property name="geometry" >
@@ -321,15 +318,6 @@
  </widget>
  <layoutdefault spacing="6" margin="11" />
  <pixmapfunction></pixmapfunction>
- <customwidgets>
-  <customwidget>
-   <class>Q3GroupBox</class>
-   <extends></extends>
-   <header>Qt3Support/Q3GroupBox</header>
-   <container>1</container>
-   <pixmap></pixmap>
-  </customwidget>
- </customwidgets>
  <tabstops>
   <tabstop>Edit_Password</tabstop>
   <tabstop>Edit_PasswordRep</tabstop>
