--- a/src/forms/PasswordGenDlg.ui
+++ b/src/forms/PasswordGenDlg.ui
@@ -35,7 +35,7 @@
     <property name="windowTitle" >
       <string>Password Generator</string>
     </property>
-    <widget class="Q3ProgressBar" name="Progress_Quali" >
+    <widget class="QProgressBar" name="Progress_Quali" >
       <property name="geometry" >
         <rect>
           <x>130</x>
@@ -165,7 +165,7 @@
         <enum>QFrame::Sunken</enum>
       </property>
     </widget>
-    <widget class="Q3GroupBox" name="groupBox1" >
+    <widget class="QGroupBox" name="groupBox1" >
       <property name="geometry" >
         <rect>
           <x>10</x>
